Tracked artists can no longer scroll infinitely, has a max height. Moved the dividers so artists appear to disappear under them. Used some webkit sorcery to customise the scroll bar, doubtful to work on IE.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -812,37 +812,52 @@ body:before {/* thanks to Maleika (Kohoutec)*/
   position:relative;
   top:25px;
   width:666px;
-      ul {
-      list-style-type:none;
-      margin-left:-15px;
-  li {
-    width:155px;
-    height:28px;
-    padding:12px 0 17px 0;
-      background:rgba(255,255,255,0.75);
-    @include border-radius(8px);
-    @include box-shadow(0px 2px 5px rgba(0, 0, 0, 0.25));
-    margin:0 0 15px 15px;
+  ::-webkit-scrollbar {
+      width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+      border-radius: 10px;
+  }
+  ::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background-color: rgba(0,0,0,0.3);
+  }
+
+  ul {
+  list-style-type:none;
+  margin:0px -20px 0px -15px;
+  max-height: 250px;
+  overflow-y: scroll;
+
+    li {
+      width:155px;
+      height:28px;
+      padding:12px 0 17px 0;
+        background:rgba(255,255,255,0.75);
+      @include border-radius(8px);
+      @include box-shadow(0px 2px 5px rgba(0, 0, 0, 0.25));
+      margin:7px 0 7px 15px;
       .each-artist-outer {
-    position:relative;
-    width:155px;
-    height:57px;
-    text-align:center;
-    a {
-      color:#000;
+        position:relative;
+        width:155px;
+        height:57px;
+        text-align:center;
+        a {
+          color:#000;
+        }
+        a:hover {
+          color:#000;
+        }
+        .remove-artist-button {
+          position:absolute;
+          height:15px;
+          width:15px;
+          top:-10px;
+          right:3px;
+        }
+      }
     }
-    a:hover {
-      color:#000;
-    }
-    .remove-artist-button {
-      position:absolute;
-      height:15px;
-      width:15px;
-      top:-10px;
-      right:3px;
-    }
-  }
-  }
   }
       .p-bulge-b {
       position:relative;
